fix: improve donut alignment :)

--- a/src/scss/components/_charts-pie.scss
+++ b/src/scss/components/_charts-pie.scss
@@ -55,7 +55,7 @@
       --zoom: .6;
       clip-path: circle(50% at 0% 50%);
       display: block;
-      height: 100%;
+      height: calc(100% - #{$gutter * 4 });
       left: 50%;
       overflow: hidden;
       position: absolute;
@@ -69,7 +69,7 @@
         --position: calc(var(--value, 0) * .01turn + 1deg);
         background-color: var(--color, currentColor);
         content: "";
-        height: inherit;
+        height: 100%;
         left: -100%;
         position: inherit;
         top: 0;
@@ -104,7 +104,7 @@
     margin: auto;
     position: absolute;
     top: 50%;
-    transform: translate3d(-50%, -50%, 0);
+    transform: translate3d(-50%, calc(-50% - #{$gutter * 2}), 0);
     width: calc(#{$width / 2} - #{$gutter * 2});
     z-index: 2;
   }
